# hackwise

./: README.md
backend/: Gemfile  Procfile.dev  README.md  docker-compose.yml
backend/LLM/: hf.py  infer_llm.py  readme.md  split.py  vllm.py
backend/app/channels/: user_channel.rb
backend/app/controllers/: application_controller.rb  articles_controller.rb  messages_controller.rb  rooms_controller.rb  slides_controller.rb  submissions_controller.rb
backend/app/jobs/: create_slide_job.rb  create_submission_job.rb  extract_embeding_job.rb  llm_job.rb  message_relay_job.rb  parse_articles_job.rb  parse_chunks_csv_job.rb  parse_slides_job.rb  room_relay_job.rb
backend/app/models/: article.rb  chunk.rb  image.rb  llm.rb  message.rb  room.rb  semantic_search.rb  text_encoder.rb  user.rb
backend/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
backend/config/environments/: development.rb  production.rb
backend/config/initializers/: active_storage.rb  rails_admin.rb  sass_compressor.rb
backend/db/: schema.rb  seeds.rb
backend/encoder/: Dockerfile  app.py
backend/public/: .~lock.articles.csv#
tgbot_wise/: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
tgbot_wise/bot_connections/api/: endpoints.py  requests.py  schemas.py
tgbot_wise/bot_connections/sockets/: endpoints.py  schemas.py  sockets.py
tgbot_wise/database/: schemas.py
tgbot_wise/handlers/: common_handlers.py
tgbot_wise/keyboards/: common_keyboards.py
tgbot_wise/test_server/: ws_test_server.py
(+35 files in other folders)
