[project]
name = "mediawise-tg-bot"
version = "0.1.0"
description = "Media Wise telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "aiohttp>=3.10.5",
    "pydantic-settings>=2.5.2",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
